--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,88 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    outline: none;
+    border: none;
+    transition: all 0.3s;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    margin: 0;
+    font-family: "Nunito Sans", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    min-height: 100vh;
+}
+
+.canvas-container {
+}
+
+.color-input-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    padding: 5px 10px;
+}
+.color-input {
+    border: 2px solid #ff9a00;
+    border-radius: 6px;
+    padding: 0;
+    margin: 0;
+}
+
+.action-buttons-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    padding: 20px 10px;
+}
+
+button {
+    cursor: pointer;
+
+    margin: 10px 14px;
+    padding: 10px 20px;
+
+    font-size: 14px;
+    font-weight: bold;
+    font-family: "Nunito Sans", sans-serif;
+
+    background-color: #ff9a00;
+    border-radius: 6px;
+    border: 2px solid #ff9a00;
+}
+button:hover {
+    background-color: #ff9a00af;
+}
+button:active {
+    background-color: transparent;
+}
+
+.reset-button {
+    background-color: #904040;
+    border: 2px solid #904040;
+    color: white;
+}
+.reset-button:hover {
+    background-color: #904040af;
+}
+.reset-button:active {
+    background-color: transparent;
+    color: black;
 }
